2017-04-06  Thomas Preud'homme  <thomas.preudhomme@arm.com

	PR target/80082
	* gcc.target/arm/atomic_loaddi_11.c: Target Cortex-R5 instead of
	ARMv7-R.

2017-04-06  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80334
	* g++.dg/torture/pr80334.C: New testcase.

2017-04-06  Martin Liska  <mliska@suse.cz>

	PR sanitizer/80166
	* gcc.dg/asan/pr80166.c: New test.

2017-04-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR tree-optimization/79390
	* gcc.target/i386/pr79390.c: Allow for cmovl.a.

2017-04-06  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80262
	* gcc.target/i386/pr80262.c: New testcase.

2017-04-06  Richard Biener  <rguenther@suse.de>

	PR middle-end/80281
	* gcc.dg/tree-ssa/pr40921.c: Add -fp-contract=off.

2017-04-05  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/70703
	* gcc.target/i386/pr70703.c: New.

2017-04-05  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/80308
	* c-c++-common/asan/pr80308.c: New test.

2017-04-05  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	PR target/79890
	* gcc.target/s390/pr79890.c: New test case.

2017-04-05  Jakub Jelinek  <jakub@redhat.com>

	PR target/80310
	* c-c++-common/ubsan/pr80310.c: New test.

2017-04-04  Jakub Jelinek  <jakub@redhat.com>

	PR c++/80297
	* g++.dg/torture/pr80297.C: New test.

	PR tree-optimization/79390
	* gcc.target/i386/pr79390.c: New test.
	* gcc.dg/ifcvt-4.c: Use -mtune-ctrl=^one_if_conv_insn for i?86/x86_64.

2017-04-04  Volker Reichelt  <v.reichelt@netcologne.de>

	PR c++/80296
	* g++.dg/cpp0x/alias-decl-80296.C: New test.

2017-04-04  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR target/80307
	* gcc.target/arm/small-multiply-m0-1.c: Do not skip test if not
	targeting any CPU or architecture.
	* gcc.target/arm/small-multiply-m0-2.c: Likewise.
	* gcc.target/arm/small-multiply-m0-3.c: Likewise.
	* gcc.target/arm/small-multiply-m0plus-1.c: Likewise.
	* gcc.target/arm/small-multiply-m0plus-2.c: Likewise.