@@ -1,3 +1,9 @@
+2017-04-06  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/80298
+	* gcc.target/i386/pr80298-1.c: New test.
+	* gcc.target/i386/pr80298-2.c: Ditto.
+
 2017-04-06  Thomas Preud'homme  <thomas.preudhomme@arm.com
 
 	PR target/80082
